# cpp-json-settings

./: .appveyor.yml  .travis.yml  BUILD.md  CHANGELOG.md  CMakeLists.txt  README.md  RELEASENOTES.md  conanfile.py  deploy.sh
ci/pipelines/: Build.jenkinsfile  NewtonDebug.properties  NewtonRelease.properties  Release.jenkinsfile  SnowDebug.properties  SnowRelease.properties
src/JSONSettings/: CMakeLists.txt  stdafx.h
src/JSONSettings/Model/: SecurityKey.h  SettingDefinition.h  SettingDefinitionMacros.h  SettingDefinitionMgr.cpp  SettingDefinitionMgr.h  SettingPath.h  SettingValue.h  SettingsCache.cpp  SettingsCache.h  SettingsCache.inl  SettingsFile.h
src/JSONSettings/Services/: EncryptedFileIOService.cpp  EncryptedFileIOService.h  FileIOService.cpp  FileIOService.h  IFileIOService.h  ISettingsJSONFileIOService.h  ISettingsService.h  SettingsJSONFileIOService.cpp  SettingsJSONFileIOService.h  SettingsMacros.h  SettingsService.cpp  SettingsService.h
src/JSONSettingsRESTAPI/: CMakeLists.txt  conanfile.py  stdafx.h
src/JSONSettingsRESTAPI/Endpoints/: SettingsGetAllEndpoint.cpp  SettingsGetAllEndpoint.h  SettingsGetEndpoint.cpp  SettingsGetEndpoint.h  SettingsSetValueEndpoint.cpp  SettingsSetValueEndpoint.h
src/JSONSettingsRESTAPI/Helpers/: ReplyBuilderHelper.cpp  ReplyBuilderHelper.h  SettingCurrentValueHelper.cpp  SettingCurrentValueHelper.h  SettingLookupHelper.cpp  SettingLookupHelper.h  SettingSerializationHelper.cpp  SettingSerializationHelper.h  SettingValueParsingHelper.cpp  SettingValueParsingHelper.h
src/JSONSettingsRESTAPI/test_package/: CMakeLists.txt  JSONSettingsRESTAPIExample.cpp  conanfile.py
test/JSONSettingsRESTAPITest/: CMakeLists.txt  stdafx.h
test/JSONSettingsRESTAPITest/Tests/: SettingsEndpointBaseTest.h  SettingsGetAllEndpointAllTest.cpp  SettingsGetAllEndpointTest.cpp  SettingsGetEndpointTest.cpp  SettingsSetValueEndpointTest.cpp  TestSettingsDefinition.h
test/JSONSettingsTest/: CMakeLists.txt  stdafx.h
test/JSONSettingsTest/Tests/: EncryptedFileIOServiceTest.cpp  FileIOServiceTest.cpp  SettingsDefinitionMgrTest.cpp  SettingsServiceAllTest.cpp  SettingsServiceBaseTest.h  SettingsServiceCacheTest.cpp  SettingsServiceDefaultTest.cpp  SettingsServiceEncryptionTest.cpp  SettingsServiceErrorTest.cpp  SettingsServiceMultipleFilesTest.cpp  SettingsServiceNoCacheTest.cpp  SettingsServiceSectionTest.cpp  SettingsServiceTest.cpp  TestSettingsDefinition.h
test/JSONSettingsTestUtilities/: CMakeLists.txt  conanfile.py  stdafx.h
test/JSONSettingsTestUtilities/Mocks/: MockSettingsService.cpp  MockSettingsService.h
test/JSONSettingsTestUtilities/Stubs/: StubDefaultSettingsService.cpp  StubDefaultSettingsService.h
test/JSONSettingsTestUtilities/test_package/: CMakeLists.txt  JSONSettingsTestUtilitiesExample.cpp  conanfile.py
test_package/: CMakeLists.txt  JSONSettingsExample.cpp  conanfile.py
